--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,6 @@
-<h1>Albergo</h1>
-<h1>{{data}}</h1>
+<h1>hello world!</h1>
+<ul>
+    <li *ngFor = "let animal of data">
+        {{animal.id}} - {{animal.name}} - {{animal.type}}
+    </li>
+</ul>
